--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@
   left: 0;
   font-size: 12pt;
   font-family: monospace;
+  z-index: -1;
 }
 
 #editor .ace_gutter {
@@ -39,6 +40,56 @@
   top: 0;
   left: 0;
   right: 0;
+}
+
+.dropdown {
+  position: relative;
+  display: inline;
+}
+
+.drop-menu {
+  position: absolute;
+  left: 30px;
+  top: calc(100% + .5rem);
+  width: 150px;
+  height: auto;
+  z-index: 9999;
+  display: none;
+  padding: 3px;
+  border: none;
+  border-radius: 5px;
+}
+
+.dropdown > .nav-btns:focus + .drop-menu {
+  display: block;
+
+}
+
+.menu-btn {
+  position: relative;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 25px;
+  background-color: transparent;
+  z-index: 99;
+  border: none;
+  border-radius: 3px;
+  font-size: 12pt;
+  text-align: left;
+}
+
+.creates {
+  position: relative;
+  top: 5px;
+  left: 40px;
+  border: none;
+  background-color: transparent;
+  text-align: center;
+  height: 25px;
+  border-radius: 5px;
+  font-size: 12pt;
+  font-family: SegoeIcons;
 }
 
 .logo {
@@ -69,7 +120,7 @@
 
 .nav-btns {
   position: relative;
-  top: 5px;
+  top: 0px;
   left: 40px;
   border: none;
   background-color: transparent;
@@ -188,6 +239,7 @@
   background: transparent;
   height: 35px;
   margin: 0;
+  z-index: -99;
 }
 
 .tab {
@@ -196,4 +248,5 @@
   background-color: transparent;
   margin: 0;
   border: none;
+  z-index: -99;
 }
